refactor: update the todo app to use React

--- a/todo-app/Dockerfile
+++ b/todo-app/Dockerfile
@@ -1,26 +1,30 @@
-FROM public.ecr.aws/docker/library/node:20.19.2-slim
+FROM node:20-slim as backend-builder
+WORKDIR /usr/src/app/backend
+COPY backend/package*.json ./
+RUN npm install
+COPY backend ./
 
-# Create app directory
+FROM node:20-slim as frontend-builder
+WORKDIR /usr/src/app/frontend
+COPY frontend/package*.json ./
+RUN npm install
+COPY frontend ./
+RUN npm run build
+
+FROM node:20-slim
 WORKDIR /usr/src/app
+COPY --from=backend-builder /usr/src/app/backend ./backend
+COPY --from=frontend-builder /usr/src/app/frontend/build ./frontend/build
+
+# Install serve to serve the frontend
+RUN npm install -g serve
 
 # Install curl for health checks
 RUN apt-get update && apt-get install -y curl && apt-get clean
 
-# Copy package.json and package-lock.json
-COPY package*.json ./
-
-# Install production dependencies only
-RUN npm install --production
-
-# Copy app source code
-COPY . .
-
-# Expose the port the app runs on
+WORKDIR /usr/src/app/backend
+EXPOSE 3001
 EXPOSE 3000
 
-# Add a healthcheck directly in the Dockerfile
-HEALTHCHECK --interval=30s --timeout=5s --start-period=60s --retries=3 \
-  CMD curl -f http://localhost:3000/health || exit 1
-
-# Command to run the app
-CMD ["npm", "start"]
+# Start both backend and frontend
+CMD ["sh", "-c", "node app.js & serve -s ../frontend/build -l 3000"]
