--- a/todo-app/.gitignore
+++ b/todo-app/.gitignore
@@ -1,10 +1,11 @@
-# Dependency directories
+# Dependencies
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-package-lock.json
-yarn.lock
+.pnp/
+.pnp.js
+
+# Production build files
+build/
+dist/
 
 # Environment variables
 .env
@@ -13,30 +14,28 @@ yarn.lock
 .env.test.local
 .env.production.local
 
-# Build outputs
-dist/
-build/
-coverage/
-
 # Logs
 logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Editor directories and files
 .idea/
 .vscode/
 *.swp
 *.swo
-.DS_Store
 
-# CDK specific
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# CDK files
 cdk.out/
 .cdk.staging/
-cdk-outputs.json
-
-# Misc
-.tmp/
-temp/
-
-# Q Develoepr context
-context.json
