--- a/todo-app/docker-compose.yml
+++ b/todo-app/docker-compose.yml
@@ -1,13 +1,16 @@
 version: '3'
-
 services:
-  app:
+  todo-app:
     build: .
     ports:
-      - "3000:3000"
-    volumes:
-      - ./:/usr/src/app
-      - /usr/src/app/node_modules
+      - "3000:3000"  # Frontend
+      - "3001:3001"  # Backend API
     environment:
-      - NODE_ENV=development
-    command: npm run dev
+      - NODE_ENV=production
+      - REACT_APP_API_URL=http://localhost:3001/api
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+      start_period: 120s
